After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762172 - vaapipluginbase: Fix structure memory leak
vaapipluginbase: Fix structure memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
git master
Other Linux
: Normal normal
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-17 08:16 UTC by Vineeth
Modified: 2016-02-17 08:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix structure memory leak (906 bytes, patch)
2016-02-17 08:17 UTC, Vineeth
committed Details | Review

Description Vineeth 2016-02-17 08:16:51 UTC
Fix for below memory leak

==20730==    at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so)
==20730==    by 0x4371BE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==20730==    by 0x4388281: g_slice_alloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==20730==    by 0x421ED31: gst_structure_new_id_empty_with_size (gststructure.c:145)
==20730==    by 0x42209F7: gst_structure_copy (gststructure.c:345)
==20730==    by 0x41BFD73: gst_buffer_pool_get_config (gstbufferpool.c:717)
==20730==    by 0x7CEAABF: gst_vaapi_plugin_base_set_pool_config (gstvaapipluginbase.c:574)
==20730==    by 0x7CEAABF: gst_vaapi_plugin_base_decide_allocation (gstvaapipluginbase.c:703)
==20730==    by 0x7CE7921: gst_vaapidecode_decide_allocation (gstvaapidecode.c:640)
==20730==    by 0x413C608: gst_video_decoder_negotiate_pool (gstvideodecoder.c:3714)
==20730==    by 0x4146F97: gst_video_decoder_negotiate (gstvideodecoder.c:3889)
==20730==    by 0x7CE6ECA: gst_vaapidecode_negotiate (gstvaapidecode.c:439)
==20730==    by 0x7CE7A1E: gst_vaapidecode_push_all_decoded_frames (gstvaapidecode.c:471)
Comment 1 Vineeth 2016-02-17 08:17:40 UTC
Created attachment 321464 [details] [review]
fix structure memory leak
Comment 2 Sebastian Dröge (slomo) 2016-02-17 08:47:38 UTC
commit 733c9b6fba036ad359de8ed50e3549049e3007b5
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Wed Feb 17 17:15:28 2016 +0900

    vaapipluginbase: Fix structure memory leak
    
    config structure is not being freed in all cases
    
    https://bugzilla.gnome.org/show_bug.cgi?id=762172