vaapipluginbase: Fix structure memory leak

config structure is not being freed in all cases

https://bugzilla.gnome.org/show_bug.cgi?id=762172