gst/vaapi/gstvaapipluginbase.c
@@ -575,6 +575,8 @@ gst_vaapi_plugin_base_set_pool_config (GstBufferPool * pool,
   if (!gst_buffer_pool_config_has_option (config, option)) {
     gst_buffer_pool_config_add_option (config, option);
     return gst_buffer_pool_set_config (pool, config);
+  } else {
+    gst_structure_free (config);
   }
   return TRUE;
 }
